--- a/shop-api/pom.xml
+++ b/shop-api/pom.xml
@@ -17,6 +17,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>top.hooya.shop</groupId>
+			<artifactId>shop-core-common</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
