--- a/shop-core/shop-core-service/pom.xml
+++ b/shop-core/shop-core-service/pom.xml
@@ -14,5 +14,22 @@
     <properties>
         <java.version>1.8</java.version>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>top.hooya.shop</groupId>
+            <artifactId>shop-core-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>top.hooya.shop</groupId>
+            <artifactId>shop-core-pojo</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>top.hooya.shop</groupId>
+            <artifactId>shop-core-dao</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
