--- a/shop-api/src/main/resources/application.properties
+++ b/shop-api/src/main/resources/application.properties
@@ -1,2 +1,16 @@
-#端口号
+#\u7AEF\u53E3\u53F7
 server.port=8888
+
+#\u6570\u636E\u5E93\u8FDE\u63A5
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/hooya_shop?useUnicode=true&characterEncoding=utf8&serverTimezone=Hongkong
+spring.datasource.username =root
+spring.datasource.password =root
+
+#\u963F\u91CC\u6570\u636E\u6E90
+spring.datasource.type =com.alibaba.druid.pool.DruidDataSource
+
+#\u5B9E\u4F53\u5305\u8DEF\u5F84
+mybatis.type-aliases-package=top.hooya.shop.pojo
+
+#\u589E\u52A0\u6253\u5370sql\u8BED\u53E5\uFF0C\u4E00\u822C\u7528\u4E8E\u672C\u5730\u5F00\u53D1\u6D4B\u8BD5
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
