--- a/shop-parent/pom.xml
+++ b/shop-parent/pom.xml
@@ -18,6 +18,7 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<alibaba.fastjson>1.2.62</alibaba.fastjson>
+		<alibaba.druid>1.1.21</alibaba.druid>
 	</properties>
 
 	<dependencies>
