--- a/shop-api/src/main/resources/application.properties
+++ b/shop-api/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8888
 #\u6570\u636E\u5E93\u8FDE\u63A5
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/hooya_shop?useUnicode=true&characterEncoding=utf8&serverTimezone=Hongkong
 spring.datasource.username =root
-spring.datasource.password =root
+spring.datasource.password =965123
 
 #\u963F\u91CC\u6570\u636E\u6E90
 spring.datasource.type =com.alibaba.druid.pool.DruidDataSource
@@ -14,3 +14,15 @@ mybatis.type-aliases-package=top.hooya.shop.pojo
 
 #\u589E\u52A0\u6253\u5370sql\u8BED\u53E5\uFF0C\u4E00\u822C\u7528\u4E8E\u672C\u5730\u5F00\u53D1\u6D4B\u8BD5
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+
+## pagehelper\u5206\u9875\u63D2\u4EF6\u914D\u7F6E ##
+#\u6807\u8BC6\u662F\u54EA\u4E00\u79CD\u6570\u636E\u5E93
+pagehelper.helperDialect=mysql
+#\u542F\u7528\u5408\u7406\u5316\uFF0C\u5982\u679CpageNum<1\u4F1A\u67E5\u8BE2\u7B2C\u4E00\u9875\uFF0C\u5982\u679CpageNum>pages\u4F1A\u67E5\u8BE2\u6700\u540E\u4E00\u9875
+pagehelper.reasonable=true
+#\u4E3A\u4E86\u652F\u6301startPage(Object params)\u65B9\u6CD5\uFF0C\u589E\u52A0\u4E86\u8BE5\u53C2\u6570\u6765\u914D\u7F6E\u53C2\u6570\u6620\u5C04\uFF0C\u7528\u4E8E\u4ECE\u5BF9\u8C61\u4E2D\u6839\u636E\u5C5E\u6027\u540D\u53D6\u503C\uFF0C \u53EF\u4EE5\u914D\u7F6EpageNum,pageSize,count,pageSizeZero,reasonable\uFF0C\u4E0D\u914D\u7F6E\u6620\u5C04\u7684\u7528\u9ED8\u8BA4\u503C\uFF0C \u9ED8\u8BA4\u503C\u4E3ApageNum=pageNum;pageSize=pageSize;count=countSql;reasonable=reasonable;pageSizeZero=pageSizeZero
+pagehelper.params=count=countSql
+#\u652F\u6301\u901A\u8FC7 Mapper \u63A5\u53E3\u53C2\u6570\u6765\u4F20\u9012\u5206\u9875\u53C2\u6570\uFF0C\u9ED8\u8BA4\u503Cfalse\uFF0C\u5206\u9875\u63D2\u4EF6\u4F1A\u4ECE\u67E5\u8BE2\u65B9\u6CD5\u7684\u53C2\u6570\u503C\u4E2D\uFF0C\u81EA\u52A8\u6839\u636E\u4E0A\u9762 params \u914D\u7F6E\u7684\u5B57\u6BB5\u4E2D\u53D6\u503C\uFF0C\u67E5\u627E\u5230\u5408\u9002\u7684\u503C\u65F6\u5C31\u4F1A\u81EA\u52A8\u5206\u9875
+pagehelper.supportMethodsArguments=true
+#\u5982\u679C pageSize=0 \u5C31\u4F1A\u67E5\u8BE2\u51FA\u5168\u90E8\u7684\u7ED3\u679C\uFF08\u76F8\u5F53\u4E8E\u6CA1\u6709\u6267\u884C\u5206\u9875\u67E5\u8BE2\uFF09
+pagehelper.page-size-zero=true
