--- a/shop-core/shop-core-common/pom.xml
+++ b/shop-core/shop-core-common/pom.xml
@@ -21,6 +21,22 @@
             <artifactId>spring-context</artifactId>
         </dependency>
         <!-- spring end -->
+        <dependency>
+            <groupId>com.alipay.sdk</groupId>
+            <artifactId>alipay-sdk-java</artifactId>
+            <version>4.9.71.ALL</version>
+        </dependency>
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.4.0</version>
+        </dependency>
+        <dependency>
+            <groupId>top.hooya.shop</groupId>
+            <artifactId>shop-core-pojo</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
