--- a/shop-core/shop-core-dao/pom.xml
+++ b/shop-core/shop-core-dao/pom.xml
@@ -22,6 +22,11 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>top.hooya.shop</groupId>
+            <artifactId>shop-core-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>2.1.1</version>
