--- a/shop-core/shop-core-common/pom.xml
+++ b/shop-core/shop-core-common/pom.xml
@@ -20,6 +20,10 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
         <!-- spring end -->
         <dependency>
             <groupId>com.alipay.sdk</groupId>
