--- a/shop-core/shop-core-pojo/pom.xml
+++ b/shop-core/shop-core-pojo/pom.xml
@@ -11,6 +11,12 @@
 	<name>shop-core-pojo</name>
 	<description>实体类</description>
 
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+	</dependencies>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
