--- a/shop-parent/shop-api/src/main/resources/application-pro.yml
+++ b/shop-parent/shop-api/src/main/resources/application-pro.yml
@@ -2,19 +2,19 @@
 server:
   port: 9999
 
-# 数据库连接
+# 数据库配置
 spring:
   datasource:
     username: root
     password: 965123
-    url: jdbc:mysql://127.0.0.1:3306/hooya_shop?useUnicode=true&characterEncoding=utf8&serverTimezone=Hongkong
     type: com.alibaba.druid.pool.DruidDataSource
+    url: jdbc:mysql://127.0.0.1:3306/hooya_shop?useUnicode=true&characterEncoding=utf8&serverTimezone=Hongkong
 
 # mybatis
 mybatis:
   type-aliases-package: top.hooya.shop.pojo
 
-## pagehelper分页插件配置
+# pagehelper
 pagehelper:
   helper-dialect: mysql
   page-size-zero: true
