--- a/shop-parent/shop-core/shop-core-pojo/pom.xml
+++ b/shop-parent/shop-core/shop-core-pojo/pom.xml
@@ -12,6 +12,7 @@
 	<description>实体类</description>
 
 	<dependencies>
+		<!-- validation -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
