--- a/shop-parent/shop-core/shop-core-common/pom.xml
+++ b/shop-parent/shop-core/shop-core-common/pom.xml
@@ -12,6 +12,7 @@
     <description>公共层</description>
 
     <dependencies>
+        <!-- local model dependency -->
         <dependency>
             <groupId>top.hooya.shop</groupId>
             <artifactId>shop-core-pojo</artifactId>
@@ -26,31 +27,30 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
-        <!-- spring end -->
+        <!-- alipay -->
         <dependency>
             <groupId>com.alipay.sdk</groupId>
             <artifactId>alipay-sdk-java</artifactId>
-            <version>${alipay.sdk}</version>
         </dependency>
+        <!-- httpclient -->
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>${httpcomponents.httpclient}</version>
         </dependency>
+        <!-- httpcore -->
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpcore</artifactId>
-            <version>${httpcomponents.httpcore}</version>
         </dependency>
+        <!-- commons-lang -->
         <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
-            <version>${commons-lang}</version>
         </dependency>
+        <!-- java-jwt -->
         <dependency>
             <groupId>com.auth0</groupId>
             <artifactId>java-jwt</artifactId>
-            <version>${auth0.jwt}</version>
         </dependency>
     </dependencies>
 
