--- a/shop-parent/shop-core/pom.xml
+++ b/shop-parent/shop-core/pom.xml
@@ -2,15 +2,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
+	<artifactId>shop-core</artifactId>
+	<name>shop-core</name>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>pom</packaging>
+	<description>核心工程</description>
+
 	<parent>
 		<groupId>top.hooya.shop</groupId>
 		<artifactId>shop-parent</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>shop-core</artifactId>
-	<packaging>pom</packaging>
-	<name>shop-core</name>
-	<description>核心工程</description>
 
 	<modules>
 		<module>shop-core-pojo</module>
