--- a/shop-parent/shop-core/shop-core-common/pom.xml
+++ b/shop-parent/shop-core/shop-core-common/pom.xml
@@ -2,14 +2,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
+    <artifactId>shop-core-common</artifactId>
+    <name>shop-core-common</name>
+    <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
+    <description>公共层</description>
+
     <parent>
         <groupId>top.hooya.shop</groupId>
         <artifactId>shop-core</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <artifactId>shop-core-common</artifactId>
-    <name>shop-core-common</name>
-    <description>公共层</description>
 
     <dependencies>
         <!-- local model dependency -->
@@ -42,10 +46,10 @@
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpcore</artifactId>
         </dependency>
-        <!-- commons-lang -->
+        <!-- commons-lang3 -->
         <dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
         </dependency>
         <!-- java-jwt -->
         <dependency>
