--- a/shop-parent/shop-core/shop-core-dao/pom.xml
+++ b/shop-parent/shop-core/shop-core-dao/pom.xml
@@ -2,14 +2,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
+    <artifactId>shop-core-dao</artifactId>
+    <name>shop-core-dao</name>
+    <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
+    <description>持久层</description>
+
     <parent>
         <groupId>top.hooya.shop</groupId>
         <artifactId>shop-core</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <artifactId>shop-core-dao</artifactId>
-    <name>shop-core-dao</name>
-    <description>持久层</description>
 
     <dependencies>
         <!-- local model dependency -->
