--- a/shop-parent/shop-core/shop-core-common/src/main/resources/resource.properties
+++ b/shop-parent/shop-core/shop-core-common/src/main/resources/resource.properties
@@ -10,7 +10,8 @@ DEL_FLAG=-1
 # \u6587\u4EF6\u670D\u52A1\u5668\u57DF\u540D
 FILE_DOMAIN=http://localhost:8089
 # \u672C\u5730\u6587\u4EF6\u5B58\u653E\u5730\u5740
-FILE_PATH=E:/upload
+#FILE_PATH=E:/upload
+FILE_PATH=/usr/upload
 
 # \u652F\u4ED8\u72B6\u6001 \u672A\u652F\u4ED8
 PAY_UNPAY=0
