--- a/shop-parent/shop-api/src/main/resources/application-dev.yml
+++ b/shop-parent/shop-api/src/main/resources/application-dev.yml
@@ -1,29 +1,40 @@
 # 端口号
 server:
-    port: 8888
-    tomcat:
-        uri-encoding: utf-8
+  port: 8888
+  tomcat:
+    uri-encoding: utf-8
 
 # 数据库配置
 spring:
-    datasource:
-        name: druidDataSource
-        type: com.alibaba.druid.pool.DruidDataSource
-        druid:
-            driver-class-name: com.mysql.cj.jdbc.Driver
-            url: jdbc:mysql://127.0.0.1:3306/hooya_shop?useUnicode=true&characterEncoding=utf8&serverTimezone=Hongkong
-            username: root
-            password: 965123
+  datasource:
+    name: druidDataSource
+    type: com.alibaba.druid.pool.DruidDataSource
+    druid:
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      url: jdbc:mysql://127.0.0.1:3306/hooya_shop?useUnicode=true&characterEncoding=utf8&serverTimezone=Hongkong
+      username: root
+      password: 965123
+  mvc:
+    throw-exception-if-no-handler-found: true
+  resources:
+    add-mappings: false
+  messages:
+    encoding: UTF-8
+  http:
+    encoding:
+      charset: UTF-8
+      enabled: true
+      force: true
 
 # mybatis
 mybatis:
-    type-aliases-package: top.hooya.shop.pojo
+  type-aliases-package: top.hooya.shop.pojo
 #    configuration:
 #        log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
 # pagehelper
 pagehelper:
-    helper-dialect: mysql
-    page-size-zero: true
-    reasonable: true
-    support-methods-arguments: true
+  helper-dialect: mysql
+  page-size-zero: true
+  reasonable: true
+  support-methods-arguments: true
