--- a/shop-parent/shop-core/shop-core-common/src/main/resources/resource.properties
+++ b/shop-parent/shop-core/shop-core-common/src/main/resources/resource.properties
@@ -6,11 +6,20 @@ TOKEN_VERIFY_FAIL=55555
 
 PARAMS_ERROR_CODE=10001
 
+WAIT_PAY_CODE=11111
+
 DEL_FLAG=-1
+
+# \u5F00\u53D1\u73AF\u5883
 # \u6587\u4EF6\u670D\u52A1\u5668\u57DF\u540D
-FILE_DOMAIN=http://localhost:8089
+#FILE_DOMAIN=http://localhost:8089
 # \u672C\u5730\u6587\u4EF6\u5B58\u653E\u5730\u5740
 #FILE_PATH=E:/upload
+
+# \u751F\u4EA7\u73AF\u5883
+# \u6587\u4EF6\u670D\u52A1\u5668\u57DF\u540D
+FILE_DOMAIN=https://file.hooya.top:8080
+# \u672C\u5730\u6587\u4EF6\u5B58\u653E\u5730\u5740
 FILE_PATH=/usr/upload
 
 # \u652F\u4ED8\u72B6\u6001 \u672A\u652F\u4ED8
